# interprete

./: CMakeLists.txt  Makefile  README.md  ast.h  eval.c  interprete  lexer.c  lexer.h  main.c  parser.c  parser.h  token.h
src/: main.c  symtable.h
src/eval/: eval.c
src/lexer/: lexer.c  lexer.h
src/parser/: parser.c  parser.h
